dist/tautulli/Deployment.tautulli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: tautulli
  name: tautulli
  namespace: tautulli
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: tautulli-tautulli-deployment-c84bd136
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
        cdk8s.io/metadata.addr: tautulli-tautulli-deployment-c84bd136
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: LSIO_ENVVALUE
          image: ghcr.io/tautulli/tautulli
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8181
          name: tautulli
          ports:
            - containerPort: 8181
          readinessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 8181
          resources:
            limits:
              cpu: 800m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /config
              name: pvc-config
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-config
          persistentVolumeClaim:
            claimName: config
            readOnly: false
