dist/tautulli/Service.tautulli.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: tautulli
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8181
      targetPort: 8181
  selector:
    cdk8s.io/metadata.addr: tautulli-tautulli-deployment-c84bd136
  type: ClusterIP
